--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "BASE_URL = 'http://127.0.0.1:5000'"
    ]
   },
   {
@@ -15,28 +16,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Hello World page\"\"\"\n",
+    "\n",
     "# r_root = requests.get('http://127.0.0.1:5000/')\n",
     "# r_root.content"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AUTH API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODQ2MzI1MywianRpIjoiNGJlYThiZjAtZWZiMS00MmI3LTkwODQtMzIyMjAwODNmNDA1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NDYzMjUzLCJleHAiOjE2NTg0NjY4NTN9.mvwqbuyzP1bfQY3k10G0Y3toRc4MeHvEkFCbQqInykk\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODQ2MzI1MywianRpIjoiNGJlYThiZjAtZWZiMS00MmI3LTkwODQtMzIyMjAwODNmNDA1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NDYzMjUzLCJleHAiOjE2NTg0NjY4NTN9.mvwqbuyzP1bfQY3k10G0Y3toRc4MeHvEkFCbQqInykk'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0MDAxMCwianRpIjoiNDM3MjgzYzgtN2IwZC00ZjJjLWFkY2ItMmMwMGViNjllODA3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQwMDEwLCJleHAiOjE2NTg2NDM2MTB9.jD7-zNrDFMiesYo67bdN1iuJXLcI7olmvW90jO5-E6s\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0MDAxMCwianRpIjoiNDM3MjgzYzgtN2IwZC00ZjJjLWFkY2ItMmMwMGViNjllODA3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQwMDEwLCJleHAiOjE2NTg2NDM2MTB9.jD7-zNrDFMiesYo67bdN1iuJXLcI7olmvW90jO5-E6s'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Login\"\"\"\n",
     "\n",
-    "r_auth_post = requests.post('http://127.0.0.1:5000/auth', json={'username': 'admin', 'password': 'admin'})\n",
+    "r_auth_post = requests.post(f'{BASE_URL}/auth', json={'username': 'admin', 'password': 'admin'})\n",
     "token = r_auth_post.json()['access_token']\n",
     "cookies = r_auth_post.cookies.get_dict()\n",
     "print(token)\n",
@@ -45,27 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "with header: {'id': 1, 'username': 'admin'}\n",
-      "with cookie: {'id': 1, 'username': 'admin'}\n"
+      "with header: {'msg': 'Token has expired'}\n",
+      "with cookie: {'msg': 'Token has expired'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Check Login status with header\"\"\"\n",
     "\n",
-    "r_auth_get = requests.get('http://127.0.0.1:5000/auth', headers={'Authorization' : f\"Bearer {token}\"})\n",
+    "r_auth_get = requests.get(f'{BASE_URL}/auth', headers={'Authorization' : f\"Bearer {token}\"})\n",
     "print(f'with header: {r_auth_get.json()}')\n",
     "\n",
     "\"\"\"Check Login status with cookie\"\"\"\n",
     "\n",
-    "r_auth_get = requests.get('http://127.0.0.1:5000/auth', cookies=cookies)\n",
+    "r_auth_get = requests.get(f'{BASE_URL}/auth', cookies=cookies)\n",
     "print(f'with cookie: {r_auth_get.json()}')"
    ]
   },
@@ -84,29 +94,15 @@
    ],
    "source": [
     "\"\"\"Logout\"\"\"\n",
-    "r_auth_del = requests.delete('http://127.0.0.1:5000/auth', cookies=cookies)\n",
+    "r_auth_del = requests.delete(f'{BASE_URL}:5000/auth', cookies=cookies)\n",
     "print(r_auth_del.json())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'projectName': []}\n"
-     ]
-    }
-   ],
    "source": [
-    "\"\"\"Project API\"\"\"\n",
-    "\n",
-    "\"\"\"get project\"\"\"\n",
-    "r_project_get = requests.get('http://127.0.0.1:5000/projects', cookies=cookies)\n",
-    "print(r_project_get.json())\n"
+    "# Project API"
    ]
   },
   {
@@ -118,19 +114,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK', 'projectName': 'test2'}\n"
+      "{'projectName': ['test']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get project names\"\"\"\n",
+    "r_project_get = requests.get(f'{BASE_URL}/projects', cookies=cookies)\n",
+    "print(r_project_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK', 'projectName': 'test'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"create project\"\"\"\n",
-    "r_project_post = requests.post('http://127.0.0.1:5000/projects', cookies=cookies, json={'projectName': 'test2'})\n",
+    "r_project_post = requests.post(f'{BASE_URL}/projects', cookies=cookies, json={'projectName': 'test'})\n",
     "print(r_project_post.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -143,59 +158,174 @@
    ],
    "source": [
     "\"\"\"update project\"\"\"\n",
-    "r_project_put = requests.put('http://127.0.0.1:5000/projects/test', cookies=cookies, json={'newProjectName': 'test2'})\n",
+    "r_project_put = requests.put(f'{BASE_URL}/projects/test', cookies=cookies, json={'newProjectName': 'test2'})\n",
     "print(r_project_put.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK', 'projectName': 'test2'}\n"
+      "{'msg': 'OK', 'projectName': 'test'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"delete project\"\"\"\n",
-    "r_project_delete = requests.delete('http://127.0.0.1:5000/projects/test2', cookies=cookies)\n",
+    "r_project_delete = requests.delete(f'{BASE_URL}/projects/test', cookies=cookies)\n",
     "print(r_project_delete.json())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# intent API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WindowsPath('C:/Users/DevilHYT/Desktop/github/flask/wingman-data/wingman-projects/test2/actions'), WindowsPath('C:/Users/DevilHYT/Desktop/github/flask/wingman-data/wingman-projects/test2/intents'), WindowsPath('C:/Users/DevilHYT/Desktop/github/flask/wingman-data/wingman-projects/test2/models'), WindowsPath('C:/Users/DevilHYT/Desktop/github/flask/wingman-data/wingman-projects/test2/rules'), WindowsPath('C:/Users/DevilHYT/Desktop/github/flask/wingman-data/wingman-projects/test2/storys')]\n"
+      "{'intentName': ['intent_1'], 'projectName': 'test'}\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"get intent names\"\"\"\n",
+    "r_intents_get = requests.get(f'{BASE_URL}/projects/test/intents', cookies=cookies)\n",
+    "print(r_intents_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'example': ['string_1', 'string_2']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get intent names\"\"\"\n",
+    "r_intent_get = requests.get(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies)\n",
+    "print(r_intent_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'intentName': 'intent_2', 'msg': 'OK', 'projectName': 'test'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"create intent\"\"\"\n",
+    "r_intent_post = requests.post(f'{BASE_URL}/projects/test/intents', cookies=cookies, json={'intentName': 'intent_1'})\n",
+    "print(r_intent_post.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'intentName': 'intent_2', 'msg': 'OK', 'projectName': 'test'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update intent\"\"\"\n",
+    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'example': ['string_1', 'string_2']})\n",
+    "print(r_intent_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'intentName': 'intent_1', 'msg': 'OK', 'projectName': 'test'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"delete project\"\"\"\n",
+    "r_intent_delete = requests.delete(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies)\n",
+    "print(r_intent_delete.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pathlib import Path\n",
-    "\n",
-    "project_dir = Path(\"C:/Users/DevilHYT/Desktop/github/flask/wingman-data//wingman-projects\")\n",
-    "\n",
-    "def rm_prj(project_name: str):\n",
-    "    \"\"\"Delete a project\"\"\"\n",
-    "     \n",
-    "    p = project_dir.joinpath(project_name)\n",
-    "    for child in p.glob('*'):\n",
-    "        if child.is_file():\n",
-    "            child.unlink()\n",
-    "        else:\n",
-    "            rm_prj(child)\n",
-    "    p.rmdir()\n",
-    "    \n",
-    "rm_prj(\"test2\")"
+    "p = Path('./test.json')\n",
+    "p.touch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'intent1': {'examples': ['string1', 'string2']}, 'intent2': {'examples': ['string1', 'string2']}}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open('./test.json', 'r', encoding=\"utf-8\") as i:\n",
+    "    j = json.load(i)\n",
+    "    print (j)\n",
+    "    print(type(j))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./test.json', 'w', encoding=\"utf-8\") as i:\n",
+    "    d = {'intent1':{'examples':['string1', 'string2']}, 'intent2':{'examples':['string1', 'string2']}, 'intent2': {}}\n",
+    "    json.dump(d, i, indent=4)"
    ]
   }
  ],
