--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0MDAxMCwianRpIjoiNDM3MjgzYzgtN2IwZC00ZjJjLWFkY2ItMmMwMGViNjllODA3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQwMDEwLCJleHAiOjE2NTg2NDM2MTB9.jD7-zNrDFMiesYo67bdN1iuJXLcI7olmvW90jO5-E6s\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0MDAxMCwianRpIjoiNDM3MjgzYzgtN2IwZC00ZjJjLWFkY2ItMmMwMGViNjllODA3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQwMDEwLCJleHAiOjE2NTg2NDM2MTB9.jD7-zNrDFMiesYo67bdN1iuJXLcI7olmvW90jO5-E6s'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0ODg0MywianRpIjoiM2MzMmI1YmQtOGM4OC00NmQ3LWE5NTctNDFkNDBlMWJhMzE4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQ4ODQzLCJleHAiOjE2NTg2NTI0NDN9.EryTe4VKCKumAfvnho27af0m4qxJy6ADtKm35ss6xF8\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0ODg0MywianRpIjoiM2MzMmI1YmQtOGM4OC00NmQ3LWE5NTctNDFkNDBlMWJhMzE4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQ4ODQzLCJleHAiOjE2NTg2NTI0NDN9.EryTe4VKCKumAfvnho27af0m4qxJy6ADtKm35ss6xF8'}\n"
      ]
     }
    ],
@@ -55,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "with header: {'msg': 'Token has expired'}\n",
-      "with cookie: {'msg': 'Token has expired'}\n"
+      "with header: {'id': 1, 'username': 'admin'}\n",
+      "with cookie: {'id': 1, 'username': 'admin'}\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
    ],
    "source": [
     "\"\"\"Logout\"\"\"\n",
-    "r_auth_del = requests.delete(f'{BASE_URL}:5000/auth', cookies=cookies)\n",
+    "r_auth_del = requests.delete(f'{BASE_URL}/auth', cookies=cookies)\n",
     "print(r_auth_del.json())"
    ]
   },
@@ -107,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'projectName': ['test']}\n"
+      "{'projectName': []}\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intentName': ['intent_1'], 'projectName': 'test'}\n"
+      "{'intentName': ['intent_1']}\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -228,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intentName': 'intent_2', 'msg': 'OK', 'projectName': 'test'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -247,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intentName': 'intent_2', 'msg': 'OK', 'projectName': 'test'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +284,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent1': {'examples': ['string1', 'string2']}, 'intent2': {'examples': ['string1', 'string2']}}\n",
+      "{}\n",
       "<class 'dict'>\n"
      ]
     }
@@ -311,20 +318,17 @@
    "source": [
     "import json\n",
     "with open('./test.json', 'r', encoding=\"utf-8\") as i:\n",
-    "    j = json.load(i)\n",
-    "    print (j)\n",
-    "    print(type(j))\n",
-    "    \n"
+    "    j = json.load(i)    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./test.json', 'w', encoding=\"utf-8\") as i:\n",
-    "    d = {'intent1':{'examples':['string1', 'string2']}, 'intent2':{'examples':['string1', 'string2']}, 'intent2': {}}\n",
+    "    d = {'intent_1':{'examples':['string_1', 'string_2']}, 'intent_2':{'examples':['string_1', 'string2_']}}\n",
     "    json.dump(d, i, indent=4)"
    ]
   }
