--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<p>Hello, World!</p>'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"Hello World page\"\"\"\n",
     "\n",
-    "# r_root = requests.get('http://127.0.0.1:5000/')\n",
-    "# r_root.content"
+    "r_root = requests.get('http://127.0.0.1:5000/?mode=all')\n",
+    "r_root.content"
    ]
   },
   {
@@ -31,15 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0ODg0MywianRpIjoiM2MzMmI1YmQtOGM4OC00NmQ3LWE5NTctNDFkNDBlMWJhMzE4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQ4ODQzLCJleHAiOjE2NTg2NTI0NDN9.EryTe4VKCKumAfvnho27af0m4qxJy6ADtKm35ss6xF8\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY0ODg0MywianRpIjoiM2MzMmI1YmQtOGM4OC00NmQ3LWE5NTctNDFkNDBlMWJhMzE4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjQ4ODQzLCJleHAiOjE2NTg2NTI0NDN9.EryTe4VKCKumAfvnho27af0m4qxJy6ADtKm35ss6xF8'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY2MDUxNiwianRpIjoiYzI1Yzc4YTQtZGFhYi00ZWFlLWE3YWItYTBlYzcxY2E3Yjg0IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjYwNTE2LCJleHAiOjE2NTg2NjQxMTZ9.Rk848q4dNaDvqAYak4dg3UNX_A3vHj5WV2JVCpHJFcI\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY2MDUxNiwianRpIjoiYzI1Yzc4YTQtZGFhYi00ZWFlLWE3YWItYTBlYzcxY2E3Yjg0IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjYwNTE2LCJleHAiOjE2NTg2NjQxMTZ9.Rk848q4dNaDvqAYak4dg3UNX_A3vHj5WV2JVCpHJFcI'}\n"
      ]
     }
    ],
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -190,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intentName': ['intent_1']}\n"
+      "{'intentName': []}\n"
      ]
     }
    ],
@@ -209,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'example': ['string_1', 'string_2']}\n"
+      "None\n"
      ]
     }
    ],
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intentName': 'intent_1', 'msg': 'OK', 'projectName': 'test'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
