--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,15 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY2MDUxNiwianRpIjoiYzI1Yzc4YTQtZGFhYi00ZWFlLWE3YWItYTBlYzcxY2E3Yjg0IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjYwNTE2LCJleHAiOjE2NTg2NjQxMTZ9.Rk848q4dNaDvqAYak4dg3UNX_A3vHj5WV2JVCpHJFcI\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODY2MDUxNiwianRpIjoiYzI1Yzc4YTQtZGFhYi00ZWFlLWE3YWItYTBlYzcxY2E3Yjg0IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NjYwNTE2LCJleHAiOjE2NTg2NjQxMTZ9.Rk848q4dNaDvqAYak4dg3UNX_A3vHj5WV2JVCpHJFcI'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc0MzA0MSwianRpIjoiNWU0MzU1NDItMmRjZC00MDQ2LWFjZDQtYWQyNjI4ODc0OWJhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzQzMDQxLCJleHAiOjE2NTg3NDY2NDF9.2DiAJTndogH4fyYLr3EqwKU-ug3oUEGf-UObXwQKEsw\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc0MzA0MSwianRpIjoiNWU0MzU1NDItMmRjZC00MDQ2LWFjZDQtYWQyNjI4ODc0OWJhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzQzMDQxLCJleHAiOjE2NTg3NDY2NDF9.2DiAJTndogH4fyYLr3EqwKU-ug3oUEGf-UObXwQKEsw'}\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,52 +137,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK', 'projectName': 'test'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"create project\"\"\"\n",
-    "r_project_post = requests.post(f'{BASE_URL}/projects', cookies=cookies, json={'projectName': 'test'})\n",
+    "r_project_post = requests.post(f'{BASE_URL}/projects', cookies=cookies, json={'project_name': 'test'})\n",
     "print(r_project_post.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK', 'newProjectName': 'test2', 'projectName': 'test'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"update project\"\"\"\n",
-    "r_project_put = requests.put(f'{BASE_URL}/projects/test', cookies=cookies, json={'newProjectName': 'test2'})\n",
+    "r_project_put = requests.put(f'{BASE_URL}/projects/test', cookies=cookies, json={'new_project_name': 'test2'})\n",
     "print(r_project_put.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK', 'projectName': 'test'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intentName': []}\n"
+      "{'intent_name': []}\n"
      ]
     }
    ],
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "{'msg': \"'intent_1'\"}\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -252,13 +252,13 @@
    ],
    "source": [
     "\"\"\"create intent\"\"\"\n",
-    "r_intent_post = requests.post(f'{BASE_URL}/projects/test/intents', cookies=cookies, json={'intentName': 'intent_1'})\n",
+    "r_intent_post = requests.post(f'{BASE_URL}/projects/test/intents', cookies=cookies, json={'intent_name': 'intent_1'})\n",
     "print(r_intent_post.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -303,44 +303,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##json test\n",
+    "\n",
+    "# from pathlib import Path\n",
+    "# p = Path('./test.json')\n",
+    "# p.touch()\n",
+    "\n",
+    "# import json\n",
+    "\n",
+    "# with open('./test.json', 'w', encoding=\"utf-8\") as i:\n",
+    "#     d = {'intent_1':{'examples':['string_1', 'string_2']}, 'intent_2':{'examples':['string_1', 'string_2']}}\n",
+    "#     json.dump(d, i, indent=4)\n",
+    "\n",
+    "# with open('./test.json', 'r', encoding=\"utf-8\") as i:\n",
+    "#     j = json.load(i)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "p = Path('./test.json')\n",
-    "p.touch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n",
-      "<class 'dict'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "with open('./test.json', 'r', encoding=\"utf-8\") as i:\n",
-    "    j = json.load(i)    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./test.json', 'w', encoding=\"utf-8\") as i:\n",
-    "    d = {'intent_1':{'examples':['string_1', 'string_2']}, 'intent_2':{'examples':['string_1', 'string2_']}}\n",
-    "    json.dump(d, i, indent=4)"
+    "p = Path('.')\n",
+    "p = p.joinpath('..')"
    ]
   }
  ],
