--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,15 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc0MzA0MSwianRpIjoiNWU0MzU1NDItMmRjZC00MDQ2LWFjZDQtYWQyNjI4ODc0OWJhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzQzMDQxLCJleHAiOjE2NTg3NDY2NDF9.2DiAJTndogH4fyYLr3EqwKU-ug3oUEGf-UObXwQKEsw\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc0MzA0MSwianRpIjoiNWU0MzU1NDItMmRjZC00MDQ2LWFjZDQtYWQyNjI4ODc0OWJhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzQzMDQxLCJleHAiOjE2NTg3NDY2NDF9.2DiAJTndogH4fyYLr3EqwKU-ug3oUEGf-UObXwQKEsw'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc1MjIxNiwianRpIjoiNDBmNTYwMGMtZDBmNS00MzM3LWJkZWYtZWY4ZjQxMDI5YzNjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzUyMjE2LCJleHAiOjE2NTg3NTU4MTZ9.wR7qoheVlqpY7PGLBvuFZShERNmXszAtCBNU9f3NA4A\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc1MjIxNiwianRpIjoiNDBmNTYwMGMtZDBmNS00MzM3LWJkZWYtZWY4ZjQxMDI5YzNjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzUyMjE2LCJleHAiOjE2NTg3NTU4MTZ9.wR7qoheVlqpY7PGLBvuFZShERNmXszAtCBNU9f3NA4A'}\n"
      ]
     }
    ],
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_name': []}\n"
+      "{'intent_name': ['intent_1']}\n"
      ]
     }
    ],
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': \"'intent_1'\"}\n"
+      "None\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +271,13 @@
    ],
    "source": [
     "\"\"\"update intent\"\"\"\n",
-    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'example': ['string_1', 'string_2']})\n",
+    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'examples': ['string_1', 'string_2']})\n",
     "print(r_intent_put.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -289,8 +289,27 @@
     }
    ],
    "source": [
-    "\"\"\"delete project\"\"\"\n",
-    "r_intent_delete = requests.delete(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies)\n",
+    "\"\"\"rename intent\"\"\"\n",
+    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'new_intent_name': 'intent_2'})\n",
+    "print(r_intent_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"delete intent\"\"\"\n",
+    "r_intent_delete = requests.delete(f'{BASE_URL}/projects/test/intents/intent_2', cookies=cookies)\n",
     "print(r_intent_delete.json())"
    ]
   },
