--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'<p>Hello, World!</p>'"
+       "b'<!doctype html>\\n<html lang=en>\\n<title>400 Bad Request</title>\\n<h1>Bad Request</h1>\\n<p>Did not attempt to load JSON data because the request Content-Type was not &#39;application/json&#39;.</p>\\n'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,6 +34,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<!doctype html>\\n<html lang=en>\\n<title>400 Bad Request</title>\\n<h1>Bad Request</h1>\\n<p>Did not attempt to load JSON data because the request Content-Type was not &#39;application/json&#39;.</p>\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Hello World page\"\"\"\n",
+    "\n",
+    "r_root = requests.post('http://127.0.0.1:5000/?mode=all', json=None)\n",
+    "r_root.content"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc1NDYxNCwianRpIjoiNmU5MTVhMWItODU2Yi00MDk4LThlODAtNTRlNmM3OGE5NTcyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzU0NjE0LCJleHAiOjE2NTg3NTgyMTR9.aU-0xI10e9IfCsbJGSwSxk4s_hdJfKsKAWbcmNSQZ1A\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODc1NDYxNCwianRpIjoiNmU5MTVhMWItODU2Yi00MDk4LThlODAtNTRlNmM3OGE5NTcyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4NzU0NjE0LCJleHAiOjE2NTg3NTgyMTR9.aU-0xI10e9IfCsbJGSwSxk4s_hdJfKsKAWbcmNSQZ1A'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODgxOTkyMSwianRpIjoiMjMwZjMwYWYtYTlhMC00Y2UzLTk1NWUtYWFhODdkM2U1Zjk1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4ODE5OTIxLCJleHAiOjE2NTg4MjM1MjF9.CVCtHQmKp6Yj4jfUpBvOjoGWX1knyJ5iLYaj2mvdrpI\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODgxOTkyMSwianRpIjoiMjMwZjMwYWYtYTlhMC00Y2UzLTk1NWUtYWFhODdkM2U1Zjk1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4ODE5OTIxLCJleHAiOjE2NTg4MjM1MjF9.CVCtHQmKp6Yj4jfUpBvOjoGWX1knyJ5iLYaj2mvdrpI'}\n"
      ]
     }
    ],
@@ -137,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"create an intent\"\"\"\n",
+    "r_intent_post = requests.post(f'{BASE_URL}/projects/test/intents', cookies=cookies, json={'intent_name': 'intent_1'})\n",
+    "print(r_intent_post.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -232,66 +274,9 @@
     }
    ],
    "source": [
-    "\"\"\"get intent names\"\"\"\n",
+    "\"\"\"get an intent\"\"\"\n",
     "r_intent_get = requests.get(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies)\n",
     "print(r_intent_get.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'msg': 'OK'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"create intent\"\"\"\n",
-    "r_intent_post = requests.post(f'{BASE_URL}/projects/test/intents', cookies=cookies, json={'intent_name': 'intent_1'})\n",
-    "print(r_intent_post.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'msg': 'OK'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"update intent\"\"\"\n",
-    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'examples': ['string_1', 'string_2']})\n",
-    "print(r_intent_put.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'msg': 'OK'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"rename intent\"\"\"\n",
-    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'new_intent_name': 'intent_2'})\n",
-    "print(r_intent_put.json())"
    ]
   },
   {
@@ -308,9 +293,189 @@
     }
    ],
    "source": [
+    "\"\"\"update intent\"\"\"\n",
+    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'examples': ['string_1']})\n",
+    "print(r_intent_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update & rename intent\"\"\"\n",
+    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'new_intent_name': 'intent_2', 'examples': ['string_1', 'string_2']})\n",
+    "print(r_intent_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"rename intent\"\"\"\n",
+    "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_2', cookies=cookies, json={'new_intent_name': 'intent_1'})\n",
+    "print(r_intent_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
     "\"\"\"delete intent\"\"\"\n",
-    "r_intent_delete = requests.delete(f'{BASE_URL}/projects/test/intents/intent_2', cookies=cookies)\n",
+    "r_intent_delete = requests.delete(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies)\n",
     "print(r_intent_delete.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Action API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'action_name': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get action names\"\"\"\n",
+    "r_actions_get = requests.get(f'{BASE_URL}/projects/test/actions', cookies=cookies)\n",
+    "print(r_actions_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"create an action\"\"\"\n",
+    "r_intent_post = requests.post(f'{BASE_URL}/projects/test/actions', cookies=cookies, json={'action_name': 'action_1', 'action_type':'response'})\n",
+    "print(r_intent_post.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"get an action\"\"\"\n",
+    "r_actions_get = requests.get(f'{BASE_URL}/projects/test/actions/action_1', cookies=cookies)\n",
+    "print(r_actions_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update action\"\"\"\n",
+    "content = {\n",
+    "    \"action_type\": \"response\",\n",
+    "    \"data\": [\n",
+    "        {\n",
+    "            \"text\": \"text_1\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"text\": \"text_2\"\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "r_action_put = requests.put(f'{BASE_URL}/projects/test/actions/action_1',\n",
+    "                            cookies=cookies, json=content)\n",
+    "print(r_action_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update & rename action\"\"\"\n",
+    "content = {\n",
+    "    'new_action_name': 'action_2',\n",
+    "    \"action_type\": \"response\",\n",
+    "    \"data\": [\n",
+    "        {\n",
+    "            \"text\": \"text_1\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"text\": \"text_2\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"text\": \"text_3\"\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "r_action_put = requests.put(\n",
+    "    f'{BASE_URL}/projects/test/actions/action_1', cookies=cookies, json=content)\n",
+    "print(r_action_put.json())\n"
    ]
   },
   {
