--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -65,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODgxOTkyMSwianRpIjoiMjMwZjMwYWYtYTlhMC00Y2UzLTk1NWUtYWFhODdkM2U1Zjk1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4ODE5OTIxLCJleHAiOjE2NTg4MjM1MjF9.CVCtHQmKp6Yj4jfUpBvOjoGWX1knyJ5iLYaj2mvdrpI\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODgxOTkyMSwianRpIjoiMjMwZjMwYWYtYTlhMC00Y2UzLTk1NWUtYWFhODdkM2U1Zjk1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4ODE5OTIxLCJleHAiOjE2NTg4MjM1MjF9.CVCtHQmKp6Yj4jfUpBvOjoGWX1knyJ5iLYaj2mvdrpI'}\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODgzMTQ0OSwianRpIjoiOWI1NWYxZGItZTI1Zi00ODJmLTliY2UtM2RmNzM4OTk0ODJlIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4ODMxNDQ5LCJleHAiOjE2NTg4MzUwNDl9.b4CEwNBm5hkFwdoVGfYZdbwVLTdPNtWKbTUSzuVzBNk\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1ODgzMTQ0OSwianRpIjoiOWI1NWYxZGItZTI1Zi00ODJmLTliY2UtM2RmNzM4OTk0ODJlIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU4ODMxNDQ5LCJleHAiOjE2NTg4MzUwNDl9.b4CEwNBm5hkFwdoVGfYZdbwVLTdPNtWKbTUSzuVzBNk'}\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "\"\"\"update & rename intent\"\"\"\n",
+    "\"\"\"update & rename an intent\"\"\"\n",
     "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies, json={'new_intent_name': 'intent_2', 'examples': ['string_1', 'string_2']})\n",
     "print(r_intent_put.json())"
    ]
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "\"\"\"rename intent\"\"\"\n",
+    "\"\"\"rename an intent\"\"\"\n",
     "r_intent_put = requests.put(f'{BASE_URL}/projects/test/intents/intent_2', cookies=cookies, json={'new_intent_name': 'intent_1'})\n",
     "print(r_intent_put.json())"
    ]
@@ -350,7 +350,7 @@
     }
    ],
    "source": [
-    "\"\"\"delete intent\"\"\"\n",
+    "\"\"\"delete an intent\"\"\"\n",
     "r_intent_delete = requests.delete(f'{BASE_URL}/projects/test/intents/intent_1', cookies=cookies)\n",
     "print(r_intent_delete.json())"
    ]
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -402,9 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'action_type': 'response', 'data': [{'text': 'text_1'}, {'text': 'text_2'}]}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"get an action\"\"\"\n",
     "r_actions_get = requests.get(f'{BASE_URL}/projects/test/actions/action_1', cookies=cookies)\n",
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +433,7 @@
     }
    ],
    "source": [
-    "\"\"\"update action\"\"\"\n",
+    "\"\"\"update an action\"\"\"\n",
     "content = {\n",
     "    \"action_type\": \"response\",\n",
     "    \"data\": [\n",
@@ -445,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +465,7 @@
     }
    ],
    "source": [
-    "\"\"\"update & rename action\"\"\"\n",
+    "\"\"\"update & rename an action\"\"\"\n",
     "content = {\n",
     "    'new_action_name': 'action_2',\n",
     "    \"action_type\": \"response\",\n",
@@ -476,6 +484,134 @@
     "r_action_put = requests.put(\n",
     "    f'{BASE_URL}/projects/test/actions/action_1', cookies=cookies, json=content)\n",
     "print(r_action_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"rename an action\"\"\"\n",
+    "r_action_put = requests.put(\n",
+    "    f'{BASE_URL}/projects/test/actions/action_2', cookies=cookies, json={'new_action_name': 'action_1'})\n",
+    "print(r_action_put.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"delete an action\"\"\"\n",
+    "r_action_delete = requests.delete(f'{BASE_URL}/projects/test/actions/action_1', cookies=cookies)\n",
+    "print(r_action_delete.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Action Type API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type_names': ['response', 'webapi']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get the names of all action types\"\"\"\n",
+    "r_action_type_get = requests.get(f'{BASE_URL}/actions/types', cookies=cookies)\n",
+    "print(r_action_type_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"items\": {\n",
+      "        \"properties\": {\n",
+      "            \"button\": {\n",
+      "                \"items\": {\n",
+      "                    \"properties\": {\n",
+      "                        \"payload\": {\n",
+      "                            \"type\": \"string\"\n",
+      "                        },\n",
+      "                        \"title\": {\n",
+      "                            \"type\": \"string\"\n",
+      "                        }\n",
+      "                    },\n",
+      "                    \"type\": \"object\"\n",
+      "                },\n",
+      "                \"type\": \"array\"\n",
+      "            },\n",
+      "            \"condition\": {\n",
+      "                \"properties\": {\n",
+      "                    \"name\": {\n",
+      "                        \"type\": \"string\"\n",
+      "                    },\n",
+      "                    \"type\": {\n",
+      "                        \"type\": \"string\"\n",
+      "                    },\n",
+      "                    \"value\": {\n",
+      "                        \"type\": \"null\"\n",
+      "                    }\n",
+      "                },\n",
+      "                \"type\": \"object\"\n",
+      "            },\n",
+      "            \"image\": {\n",
+      "                \"type\": \"string\"\n",
+      "            },\n",
+      "            \"text\": {\n",
+      "                \"type\": \"string\"\n",
+      "            }\n",
+      "        },\n",
+      "        \"type\": \"object\"\n",
+      "    },\n",
+      "    \"title\": \"response\",\n",
+      "    \"type\": \"array\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get the schema of an action type\"\"\"\n",
+    "import json\n",
+    "r_action_schema_get = requests.get(f'{BASE_URL}/actions/schema/response', cookies=cookies)\n",
+    "schema = r_action_schema_get.json()\n",
+    "print(json.dumps(schema, indent=4))"
    ]
   },
   {
