--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -27,9 +27,9 @@
     }
    ],
    "source": [
-    "\"\"\"Hello World page\"\"\"\n",
+    "\"\"\"get test\"\"\"\n",
     "\n",
-    "r_root = requests.get('http://127.0.0.1:5000/?mode=all')\n",
+    "r_root = requests.get(f'{BASE_URL}/?mode=all')\n",
     "r_root.content"
    ]
   },
@@ -50,9 +50,9 @@
     }
    ],
    "source": [
-    "\"\"\"Hello World page\"\"\"\n",
+    "\"\"\"post test\"\"\"\n",
     "\n",
-    "r_root = requests.post('http://127.0.0.1:5000/?mode=all', json=None)\n",
+    "r_root = requests.post(f'{BASE_URL}/?mode=all', json=None)\n",
     "r_root.content"
    ]
   },
@@ -102,15 +102,15 @@
     }
    ],
    "source": [
-    "\"\"\"Check Login status with header\"\"\"\n",
+    "\"\"\"Check Login status via header\"\"\"\n",
     "\n",
     "r_auth_get = requests.get(f'{BASE_URL}/auth', headers={'Authorization' : f\"Bearer {token}\"})\n",
-    "print(f'with header: {r_auth_get.json()}')\n",
+    "print(f'via header: {r_auth_get.json()}')\n",
     "\n",
-    "\"\"\"Check Login status with cookie\"\"\"\n",
+    "\"\"\"Check Login status via cookie\"\"\"\n",
     "\n",
     "r_auth_get = requests.get(f'{BASE_URL}/auth', cookies=cookies)\n",
-    "print(f'with cookie: {r_auth_get.json()}')"
+    "print(f'via cookie: {r_auth_get.json()}')"
    ]
   },
   {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -649,9 +649,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "p = Path('.')\n",
-    "p = p.joinpath('..')"
+    "# from pathlib import Path\n",
+    "# p = Path('.')\n",
+    "# p = p.joinpath('..')"
    ]
   }
  ],
