--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -36,31 +36,8 @@
    "source": [
     "\"\"\"get test\"\"\"\n",
     "\n",
-    "r_get = requests.get(f'{BASE_URL}/?mode=all')\n",
+    "r_get = requests.get(f'{BASE_URL}')\n",
     "r_get.content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'<p>Hello, World!</p>'"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"post test\"\"\"\n",
-    "\n",
-    "r_post = requests.post(f'{BASE_URL}/?mode=all', json={})\n",
-    "r_post.content"
    ]
   },
   {
