--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'<p>Hello, World!</p>'"
+       "b'{\\n  \"msg\": \"404 Not Found: The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.\"\\n}\\n'"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,15 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTAwMDU0OCwianRpIjoiNzdkMDM3ODUtODZiZC00MzYwLWFhMWItMmE4NWViOWU5YTg3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MDAwNTQ4LCJleHAiOjE2NTkwMDQxNDh9.9ENMy7cRVSjZG0MZ5YR5ajXrJmca5rjtxK6rabbbx10\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTAwMDU0OCwianRpIjoiNzdkMDM3ODUtODZiZC00MzYwLWFhMWItMmE4NWViOWU5YTg3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MDAwNTQ4LCJleHAiOjE2NTkwMDQxNDh9.9ENMy7cRVSjZG0MZ5YR5ajXrJmca5rjtxK6rabbbx10'}\n"
+     "ename": "KeyError",
+     "evalue": "'access_token'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\DevilHYT\\Desktop\\github\\wingman-api\\test\\test.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000004?line=0'>1</a>\u001b[0m \u001b[39m\"\"\"Login\"\"\"\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000004?line=2'>3</a>\u001b[0m r_post \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mBASE_URL\u001b[39m}\u001b[39;00m\u001b[39m/auth\u001b[39m\u001b[39m'\u001b[39m, json\u001b[39m=\u001b[39m{\u001b[39m'\u001b[39m\u001b[39musername\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39madmin\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mpassword\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39madmin\u001b[39m\u001b[39m'\u001b[39m})\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000004?line=3'>4</a>\u001b[0m token \u001b[39m=\u001b[39m r_post\u001b[39m.\u001b[39;49mjson()[\u001b[39m'\u001b[39;49m\u001b[39maccess_token\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000004?line=4'>5</a>\u001b[0m cookies \u001b[39m=\u001b[39m r_post\u001b[39m.\u001b[39mcookies\u001b[39m.\u001b[39mget_dict()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000004?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(token)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'access_token'"
      ]
     }
    ],
@@ -144,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': \"[WinError 183] 當檔案已存在時，無法建立該檔案。: 'C:\\\\\\\\Users\\\\\\\\DevilHYT\\\\\\\\Desktop\\\\\\\\github\\\\\\\\wingman-api\\\\\\\\wingman-data\\\\\\\\wingman-projects\\\\\\\\project_1'\"}\n"
      ]
     }
    ],
